--- a/user__profile.scss
+++ b/user__profile.scss
@@ -1,7 +1,4 @@
-@use 'colors';
-@use 'width';
-@use 'height';
-
+@use 'variables';
 
 * {
     margin: 0;
@@ -10,63 +7,63 @@
 }
 
 body {
-    background-color: colors.$body-bg-color-e3e5fa;
-    width: width.$wid-per-100;
-    height: height.$height-per-100;
+    background-color: variables.$body-bg-color;
+    width: variables.$wid-per-100;
+    height: variables.$height-per-100;
 }
 
 .header {
-    background-color: colors.$bg-color-white;
-    width: width.$wid-per-100;
-    height: height.$height-px-45;
+    background-color: variables.$color-white;
+    width: variables.$wid-per-100;
+    height: variables.$height-px-45;
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
 
     .header__left {
-        width: width.$wid-px-250;
+        width: variables.$wid-px-250;
         display: flex;
         justify-content: center;
         align-items: center;
 
 
         .header__left__image {
-            width: width.$wid-px-30;
-            height: height.$height-px-30;
+            width: variables.$wid-px-30;
+            height: variables.$height-px-30;
         }
 
         .header__left__topic {
             font-family: sans-serif;
-            font-size: 25px;
+            font-size: variables.$font-px-25;
 
         }
     }
 
     .header__right {
-        width: width.$wid-px-600;
+        width: variables.$wid-px-600;
         display: flex;
         align-items: center;
 
         .header__right__navigation {
-            width: width.$wid-px-110;
-            border: 3px solid colors.$bg-color-white;
-            height: height.$height-per-100;
+            width: variables.$wid-px-110;
+            border: 3px solid variables.$color-white;
+            height: variables.$height-per-100;
             display: flex;
             align-items: center;
             justify-content: center;
         }
 
         .header__right__navigation:hover {
-            border-bottom-color: colors.$navigation-color-5f6efa;
+            border-bottom-color: variables.$navigation-color-5f6efa;
         }
 
         .header__right__button {
             border-radius: 25px;
-            background-color: colors.$navigation-color-5f6efa;
+            background-color: variables.$navigation-color-5f6efa;
             padding: 8px;
-            width: width.$wid-px-70;
-            font-size: 10px;
-            color: colors.$bg-color-white;
+            width: variables.$wid-px-70;
+            font-size: variables.$font-px-10;
+            color: variables.$color-white;
             border: none;
             cursor: pointer;
         }
@@ -74,9 +71,9 @@ body {
 }
 
 .login {
-    background-color: colors.$form-bg-color;
-    width: width.$wid-per-100;
-    height: height.$height-per-100;
+    background-color: variables.$form-bg-color;
+    width: variables.$wid-per-100;
+    height: variables.$height-per-100;
     position: absolute;
     top: 0;
     display: none;
@@ -84,20 +81,20 @@ body {
     align-items: center;
 
     .login__form {
-        width: width.$wid-px-500;
-        height: height.$height-px-500;
-        background-color: colors.$bg-color-white;
+        width: variables.$wid-px-500;
+        height: variables.$height-px-500;
+        background-color: variables.$color-white;
         position: relative;
 
         .login__form__image {
-            width: width.$wid-px-200;
-            height: height.$height-px-200;
+            width: variables.$wid-px-200;
+            height: variables.$height-px-200;
             margin-left: 150px;
         }
 
         .login__form__cross {
-            width: width.$wid-px-20;
-            height: height.$height-px-20;
+            width: variables.$wid-px-20;
+            height: variables.$height-px-20;
             float: right;
             cursor: pointer;
         }
@@ -107,9 +104,9 @@ body {
 
             .login__form__authentication__input {
                 display: block;
-                width: width.$wid-px-300;
-                height: height.$height-px-30;
-                box-shadow: 5px 5px 5px rgb(233, 230, 230);
+                width: variables.$wid-px-300;
+                height: variables.$height-px-30;
+                box-shadow: 5px 5px 5px variables.$input-shadow-color;
                 outline: none;
                 border: none;
 
@@ -130,32 +127,32 @@ body {
 
 .login__button {
     border-radius: 25px;
-    width: width.$wid-px-200;
+    width: variables.$wid-px-200;
     padding: 8px;
     margin-left: 150px;
     border: none;
-    color: colors.$bg-color-white;
+    color: variables.$color-white;
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgb(71, 67, 139) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
     cursor: pointer;
 }
 
 .login__success {
-    width: width.$wid-px-500;
-    height: height.$height-px-100;
-    background-color: colors.$bg-color-white;
+    width: variables.$wid-px-500;
+    height: variables.$height-px-100;
+    background-color: variables.$color-white;
     position: relative;
     display: flex;
 
     .login__success__image {
-        width: width.$wid-px-40;
-        height: height.$height-px-30;
+        width: variables.$wid-px-40;
+        height: variables.$height-px-30;
     }
 
     .login__success__message {
         color: rgb(4, 169, 4);
-        font-size: 17px;
-        width: width.$wid-px-500;
+        font-size: variables.$font-px-17;
+        width: variables.$wid-px-500;
         font-family: sans-serif;
     }
 
@@ -165,8 +162,8 @@ body {
     }
 
     .login__success__cross {
-        width: width.$wid-px-20;
-        height: height.$height-px-20;
+        width: variables.$wid-px-20;
+        height: variables.$height-px-20;
         float: top;
         cursor: pointer;
         margin-left: 5px;
@@ -193,27 +190,27 @@ body {
     display: flex;
 
     .form__searchimg {
-        width: width.$wid-px-40;
-        height: height.$height-px-40;
-        box-shadow: 5px 5px 5px colors.$shadow-box-color;
+        width: variables.$wid-px-40;
+        height: variables.$height-px-40;
+        box-shadow: 5px 5px 5px variables.$shadow-box-color;
     }
 
     .form__search {
-        width: width.$wid-px-940;
-        height: height.$height-px-40;
+        width: variables.$wid-px-940;
+        height: variables.$height-px-40;
         border: none;
         outline: none;
-        box-shadow: 5px 5px 5px colors.$shadow-box-color;
-        font-size: 15px;
+        box-shadow: 5px 5px 5px variables.$shadow-box-color;
+        font-size: variables.$font-px-15;
     }
 
     .form__button {
         margin-left: 10px;
         padding: 8px;
-        width: width.$wid-px-105;
-        height: height.$height-px-40;
-        background-color: colors.$bg-color-white;
-        box-shadow: 5px 5px 5px colors.$shadow-box-color;
+        width: variables.$wid-px-105;
+        height: variables.$height-px-40;
+        background-color: variables.$color-white;
+        box-shadow: 5px 5px 5px variables.$shadow-box-color;
         border-radius: 5px;
         border: none;
         outline: none;
@@ -225,14 +222,14 @@ body {
 
 
 .maincontainer__bottom {
-    width: width.$wid-per-100;
-    height: height.$height-per-100;
+    width: variables.$wid-per-100;
+    height: variables.$height-per-100;
     padding: 30px 200px 0 200px;
     margin-top: 40px;
 }
 
 .search__error {
-    color: colors.$navigation-color-5f6efa;
+    color: variables.$navigation-color-5f6efa;
     display: none;
 }
 
@@ -242,15 +239,15 @@ body {
     gap: 40px;
 
     .grid__element {
-        background-color: colors.$bg-color-white;
+        background-color: variables.$color-white;
         padding: 10px;
         grid-row: span 8;
         border-radius: 5px;
         text-align: center;
 
         .grid__element__img {
-            width: width.$wid-px-160;
-            height: height.$height-px-160;
+            width: variables.$wid-px-160;
+            height: variables.$height-px-160;
             border-radius: 50%;
             margin-top: 12px;
             object-fit: cover;
@@ -259,13 +256,13 @@ body {
 
         .grid__element__name {
             font-weight: 600;
-            font-size: 16px;
+            font-size: variables.$font-px-16;
         }
 
         .grid__element__country {
             font-weight: 300;
             color: rgb(124, 124, 124);
-            font-size: 14px;
+            font-size: variables.$font-px-14;
             margin-bottom: 10px;
         }
 
@@ -278,8 +275,8 @@ body {
 
         .grid__element__rating {
             text-align: center;
-            color: colors.$star-bg-color-orange;
-            font-size: 17px;
+            color: variables.$star-bg-color-orange;
+            font-size: variables.$font-px-17;
             letter-spacing: 4px;
         }
 
@@ -292,20 +289,22 @@ body {
                 width: 70px;
                 height: 30px;
                 text-align: center;
-                background-color: colors.$navigation-color-5f6efa;
+                background-color: variables.$navigation-color-5f6efa;
                 border-radius: 10px;
                 border: none;
-                color: colors.$bg-color-white;
-                box-shadow: 5px 5px 5px rgb(233, 230, 230);
+                color: variables.$color-white;
+                box-shadow: 5px 5px 5px variables.$input-shadow-color;
 
             }
-            .grid__button:hover{
+
+            .grid__button:hover {
                 cursor: pointer;
             }
         }
 
     }
-    .grid__element:hover{
+
+    .grid__element:hover {
         cursor: pointer;
         box-shadow: 5px 5px 40px #858bbe;
     }
@@ -313,9 +312,9 @@ body {
 }
 
 .addNewForm {
-    width: width.$wid-per-100;
-    height: height.$height-per-100;
-    background-color: colors.$form-bg-color;
+    width: variables.$wid-per-100;
+    height: variables.$height-per-100;
+    background-color: variables.$form-bg-color;
     position: absolute;
     top: 0;
     display: none;
@@ -324,25 +323,25 @@ body {
     text-align: center;
 
     .addNewForm__popup {
-        width: width.$wid-px-600;
-        height: height.$height-px-600;
-        background-color: colors.$bg-color-white;
+        width: variables.$wid-px-600;
+        height: variables.$height-px-600;
+        background-color: variables.$color-white;
         position: relative;
 
         .addNewForm__popup__image {
-            width: width.$wid-px-200;
-            height: height.$height-px-200;
+            width: variables.$wid-px-200;
+            height: variables.$height-px-200;
         }
 
         .addNewForm__popup__entries {
             display: block;
             margin: 10px 0 30px 80px;
-            width: width.$wid-px-450;
-            height: height.$height-px-40;
-            box-shadow: 5px 5px 5px rgb(233, 230, 230);
+            width: variables.$wid-px-450;
+            height: variables.$height-px-40;
+            box-shadow: 5px 5px 5px variables.$input-shadow-color;
             outline: none;
             border: none;
-            font-size: 20px;
+            font-size: variables.$font-px-15;
         }
 
         .addNewForm__popup__entries:hover {
@@ -351,11 +350,11 @@ body {
 
         .addNewForm__popup__button {
             border-radius: 25px;
-            width: width.$wid-px-250;
-            height: height.$height-px-40;
+            width: variables.$wid-px-250;
+            height: variables.$height-px-40;
             padding: 8px;
             border: none;
-            color: colors.$bg-color-white;
+            color: variables.$color-white;
             background: rgb(2, 0, 36);
             background: linear-gradient(90deg, rgb(71, 67, 139) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
             cursor: pointer;
@@ -365,8 +364,8 @@ body {
         }
 
         .addNewForm__popup__wrong {
-            width: width.$wid-px-20;
-            height: height.$height-px-20;
+            width: variables.$wid-px-20;
+            height: variables.$height-px-20;
             float: right;
             cursor: pointer;
         }
