--- a/user__profile.css
+++ b/user__profile.css
@@ -254,14 +254,14 @@ body {
   border-radius: 10px;
   border: none;
   color: white;
-  box-shadow: 5px 5px 5px rgb(233, 230, 230);
 }
 .grid .grid__element .grid__element__button .grid__button:hover {
   cursor: pointer;
+  box-shadow: 0 5px 10px #6572e8;
 }
 .grid .grid__element:hover {
   cursor: pointer;
-  box-shadow: 5px 5px 40px #858bbe;
+  border: 4px solid #727cd8;
 }
 
 .addNewForm {
@@ -290,13 +290,14 @@ body {
   margin: 10px 0 30px 80px;
   width: 450px;
   height: 40px;
-  box-shadow: 5px 5px 5px rgb(233, 230, 230);
+  box-shadow: 0 5px 5px rgb(233, 230, 230);
   outline: none;
   border: none;
   font-size: 15px;
+  padding-left: 10px;
 }
 .addNewForm .addNewForm__popup .addNewForm__popup__entries:hover {
-  border-bottom: 2px solid black;
+  border-bottom: 1px solid black;
 }
 .addNewForm .addNewForm__popup .addNewForm__popup__button {
   border-radius: 25px;
